--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,86 +1,15 @@
-@font-face {
-    font-family: LandDownUnder;
-    src: url('/our-food-farm/public/fonts/land_downunder/land downunder.ttf');
-}
-
-@font-face {
-    font-family: Exo;
-    src: url('/our-food-farm/public/fonts/exo/Exo-Light.ttf');
-    unicode-range: U+30-39;
-}
-
-body {
-	font-family: LandDownUnder;
-}
-
-nav ul li a {
-	color: inherit;
-	font-size: 2.3rem;
-	text-shadow: 0 0 1px #c1f5ac;
-}
-
 #ziplabel {
 	color: white;
-	font-size: 3.2rem;
 	font-weight: 600;
 	text-shadow: 0 0 4px #666;
 	display: block;
-	margin-left: 35%;
-    margin-right: 35%;
-}
-
-.ldu {
-	font-family: LandDownUnder;
-}
-
-.logo {
-	padding-top: 2px !important;
-	font-size: 3.9rem !important;
-	margin-left: 0.5rem;
-	text-shadow: 0 0 1px #c1f5ac;
-}
-
-.marquee {
-	text-align: center;
-	position:absolute;
-	z-index:0;
-	left:0;
-	top: -70px;
-	width:100%;
-	height:100%
 }
 
 .zip {
-    width: 30% !important;
     background: white !important;
-    font-size: 1.3rem !important;
     text-align: center;
     font-family: Exo;
     border: none;
-}
-
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  font-family: LandDownUnder;
-  font-size: 2.3rem !important;
-  color: #adad85;
-}
-
-::-moz-placeholder { /* Firefox 19+ */
-  font-family: LandDownUnder;
-  font-size: 2.3rem !important;
-  color: #adad85;
-}
-
-:-ms-input-placeholder { /* IE 10+ */
-  font-family: LandDownUnder;
-  font-size: 2.3rem !important;
-  color: #adad85;
-}
-
-:-moz-placeholder { /* Firefox 18- */
-  font-family: LandDownUnder;
-  font-size: 2.3rem !important;
-  color: #adad85;
 }
 
 .icon {
@@ -100,4 +29,73 @@ nav ul li a {
     top: -3px;
     border: none;
     position: relative;
+}
+
+.marquee {
+	text-align: center;
+	position:absolute;
+	z-index:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+
+@media (max-width: 360px) { /*Mobile Dev S*/
+	.marquee{
+		top: -50px;
+	}
+	#ziplabel{
+		font-size: 1.9rem;
+		margin-left: 25%;
+    	margin-right: 25%;
+	}
+	.zip {
+	    width: 40% !important;
+	    font-size: 1.3rem !important;
+	}
+}
+
+@media (min-width: 370px) and (max-width: 673px) { /*Mobile Dev M and L*/
+	.marquee{
+		top: -55px;
+	}
+	#ziplabel{
+		font-size: 2.3rem;
+		margin-left: 25%;
+    	margin-right: 25%;
+	}
+	.zip {
+	    width: 40% !important;
+	    font-size: 1.3rem !important;
+	}
+}
+
+@media (min-width: 674px) and (max-width: 862px) { /*Tablet*/
+	.marquee{
+		top: -50px;
+	}
+	#ziplabel{
+		font-size: 2.5rem;
+		margin-left: 35%;
+    	margin-right: 35%;
+	}
+	.zip {
+	    width: 40% !important;
+	    font-size: 1.3rem !important;
+	}
+}
+
+@media (min-width: 863px) { /*Laptop/Desktop*/
+	.marquee {
+		top: -70px;
+	}
+	#ziplabel{
+		font-size: 3.2rem;
+		margin-left: 35%;
+    	margin-right: 35%;
+	}
+	.zip {
+	    width: 30% !important;
+	    font-size: 1.3rem !important;
+	}
 }
