:bread:Use Toast to let user know of cart addition This doesn't take up the view, but lets the user know that their cart has changed.

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -12,6 +12,11 @@
 #cart-mobile-trigger {
 	float: right;
 }
+
+#toast-container {
+	font-family: sans-serif;
+	font-size: 1rem;
+}
 /*
 .cart-wrapper {
 	position: relative;
