adding click on enter back to landing, and newly to keyword search.  Also fixing issue where styling from home affected create a stand

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,7 +3,7 @@
 	background-color: rgb(194, 239, 149);
 }
 
-#zip, #zip-text {
+span#zip, #zip-text {
 	color: white;
 	font-family: BebasKai;
 	text-shadow: 0 0 1px #34482b;
